--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="demo-container">
         <div class="modal-control">
-            <p id="quote">A modal component</p>
+            <p id="quote"></p>
             <button type="button">Edit Value</button>
         </div>
     </div>
